iPhone dashboard icons

--- a/reviewApp-Info.plist
+++ b/reviewApp-Info.plist
@@ -26,5 +26,12 @@
 	<true/>
 	<key>NSMainNibFile</key>
 	<string>MainWindow</string>
+	<key>UIPrerenderedIcon</key>
+	<true/>
+	<key>CFBundleIconFiles</key>
+	<array>
+		<string>icon.png</string>
+		<string>icon@2x.png</string>
+	</array>
 </dict>
 </plist>
