--- a/AppStronomy-Info.plist
+++ b/AppStronomy-Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>CFBundleIdentifier</key>
-	<string>net.shinyfrog.ReviewApp</string>
+	<string>net.shinyfrog.appstronomy</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
